Fix issue with z-index for buttons and cards

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -26,13 +26,14 @@
     width: inherit;
     height: inherit;
     border-radius: inherit;
-    z-index: -1;
   }
 
   &__content {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 10;
   }
 
   &--disabled {
@@ -82,7 +83,6 @@
       justify-content: center;
       align-items: center;
 
-      top: 0;
       right: 0;
       width: 44px;
       height: 44px;
