--- a/src/components/common/card/card.scss
+++ b/src/components/common/card/card.scss
@@ -7,7 +7,6 @@
   border-radius: 4px;
 
   position: relative;
-  z-index: -100;
 
   display: flex;
   flex-direction: column;
