--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -1,6 +1,5 @@
 .room-card {
   position: relative;
-  z-index: 100;
   max-width: 380px;
 
   @media screen and (max-width: 350px) {
